--- a/docker/xdebug.ini
+++ b/docker/xdebug.ini
@@ -3,4 +3,4 @@ xdebug.discover_client_host=1
 xdebug.idekey=PHPSTORM
 xdebug.client_host=docker.host.ip
 xdebug.client_port=9003
-xdebug.start_with_request=yes
+xdebug.start_with_request=trigger
